# soma-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  eval.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/io/: dataset.rs  mod.rs
src/models/: algorithm.rs  mod.rs  store.rs  wrapper.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
tests/: cli.rs
tests/data/: housing_mini.csv  iris_mini.csv
