[package]
name = "soma"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "An easy-to-use CLI for training and using machine learning models powered by smartcore"
authors = ["jamieyoung5"]
license = "GPL-3.0-only"
repository = "https://github.com/jamieyoung5/soma-rs"
homepage = "https://github.com/jamieyoung5/soma-rs"
readme = "README.md"
keywords = ["machine-learning", "cli", "smartcore", "ml"]
categories = ["command-line-utilities", "science"]
exclude = ["tests/data/*", ".github/*"]

[dependencies]
smartcore = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
anyhow = "1"
thiserror = "2"
csv = "1.3"
comfy-table = "7"
ratatui = "0.29"
crossterm = "0.28"
tui-big-text = "0.7"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
